# ServiceProtection

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/km/ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: constant.h  dameon-lib.cpp  dameon-lib.h  native-lib.cpp
app/src/main/java/com/example/km/ndk/: BaseApplication.java  MainActivity.java
app/src/main/java/com/example/km/ndk/account/: AccountHelper.java  AuthenticationService.java  SyncProvider.java  SyncService.java
app/src/main/java/com/example/km/ndk/data/: Constants.java
app/src/main/java/com/example/km/ndk/jni/: NativeJNI.java
app/src/main/java/com/example/km/ndk/job/: JobSchedulerManager.java  KeepJobService.java
app/src/main/java/com/example/km/ndk/notification/: BaoHuoNLService.java
app/src/main/java/com/example/km/ndk/receiver/: Receiver1.java  Receiver2.java
app/src/main/java/com/example/km/ndk/service/: DaemonService.java  PlayerMusicService.java  UploadService.java
app/src/main/java/com/example/km/ndk/strategy/: DaemonClient.java  DaemonStrategy21.java  DaemonStrategy22.java  DaemonStrategy23.java  DaemonStrategyUnder21.java  DaemonStrategyXiaomi.java
app/src/main/java/com/example/km/ndk/util/: Constants.java  PackageUtils.java  StrategyUtil.java  SystemUtil.java  VersionUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accountauthenticator.xml  sync_adapter.xml
app/src/test/java/com/example/km/ndk/: ExampleUnitTest.java
(+4 files in other folders)
